chat, gmail, swagger update
